# sentinel_cubepath

./: .env.example  .gitignore  CLAUDE.md  INFORME_DE_INTEGRIDAD_SENTINEL.md  README.md  SYSTEM-PROMPT.md  cubepath.yaml  docker-compose.yml  sentinel-cubepath.code-workspace
.backup/: AIOpsShieldView.tsx.bak  CrystalLatticeView.tsx.bak  main.rs.bak
backend/: Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/docs/: PROTOCOLO_YATRA.md
backend/ebpf/: Makefile  benchmark_exec.c  burst_sensor.c  cortex_events.h  guardian_alpha_lsm.c  guardian_cognitive.c  init_kprobe.c  loader.c  lsm_ai_guardian.c  lsm_attach.c  lsm_loader.c  populate_whitelist.sh  tc_firewall.c  xdp_firewall.c
backend/src/: crystal.rs  ebpf.rs  encryption.rs  harmonic.rs  main.rs  math.rs  memory.rs  models.rs  mycnet.rs  neural.rs  physics.rs  predictive.rs  quantum.rs  resonant.rs  scheduler.rs  state_mod.rs  truthsync.rs
backend/src/math/: buffer_system.rs  complex.rs  core.rs  hexagonal_control.rs  isochronous_oscillator.rs  mod.rs  resonant_matrix.rs  resonant_matrix_v1.rs.bak  s60.rs  spa.rs  spa_complex.rs  spa_math.rs
backend/src/nerves/: bridge.rs  mod.rs
backend/src/quantum/: bio_resonator.rs  buffer_system.rs  mod.rs  portal_detector.rs  quantum_scheduler.rs  semantic_router.rs  semantic_shell.rs
backend/src/security/: mod.rs  sanitizer.rs  soul_verifier.rs  soul_verifier_production.rs  wal.rs
docs/: ACADEMIC_VALIDATION.md  AIOPS_SHIELD_COMMERCIAL.md  ANALISIS_MEJORAS_ADICIONALES.md  ANALISIS_POC_BUFFERS.md  AUDIT_TESTS.md  BEHAVIOR_STUDY.md  BENCHMARKS.md  BENCHMARKS_VALIDATED_EN.md  CAPTURA_IDEAS_CLAVE.md  CHANGELOG.md  CHANGELOG_20251230.md  CLAIM_4_FORENSIC_WAL_VALIDATED.md  CLAIM_5_MTLS_VALIDATED.md  CLEANUP_PLAN.md  COGNITIVE_DESIGN.md  COGNITIVE_KERNEL_VISION.md  COGNITIVE_KERNEL_VISION_EN.md  COMO_EXPLICAR_AL_MUNDO.md  COMPLETE_OVERVIEW.md  CONTEXTO_COMPLETO_ANALISIS_2024_12_22.md  CONTRIBUTING.md  CRYSTAL_LATTICE.md  CUSTOM_WASM_ENGINE.md  CV_ANID.md  DIAGNOSTICO_BLOQUEOS.md  DOCUMENTACION_MAESTRA_VALIDACION.md  DOCUMENTACION_TECNICA.md  DOCUMENTATION_INDEX.md  DOCUMENTO_FINAL_ANID.md  (+140 more)
(+435 files in other folders)
