[package]
name = "sentinel-cortex"
version = "1.0.0"
edition = "2021"
authors = ["Sentinel Team"]
description = "AI Safety at Kernel Level - Ring 0 Cognitive Firewall"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
libbpf-rs = "0.23"

# Memory & AI (Using same versions as sentinel_media)
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = "0.19"
hf-hub = "0.4"

[[bin]]
name = "sentinel-cortex"
path = "src/main.rs"