[package]
name = "sentinel-cortex"
version = "1.0.0"
edition = "2021"
authors = ["Sentinel Team"]
description = "AI Safety at Kernel Level - Ring 0 Cognitive Firewall"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-tungstenite = "0.24"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
libbpf-rs = "0.23"
rand = "0.8"

# Memory & AI (Using same versions as sentinel_media)
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
tokenizers = "0.19"
hf-hub = "0.4"
sha2 = "0.11.0"
sha3 = "0.10.8"
hex = "0.4.3"
dotenvy = "0.15.7"
rustyline = "12"
rustyline-derive = "0.10"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }


# Release Profile: Optimized for size/memory on 4GB node
[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Maximize optimization
panic = 'abort'     # Reduce binary overhead
strip = true        # Remove debug symbols
